# youtube_telegram_bot_frontend

./: .pre-commit-config.yaml  README.md  pyproject.toml
project/: bot.py  config.py  filters.py  inline_buttons.py
project/infra/: http_client.py
project/plugins/: handlers.py
project/schemas/: user.py
