[tool.poetry]
name = "youtube_telegram_bot_celery_docker"
version = "0.1.0"
description = ""
authors = ["Daniel Montoya <da03@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.51"
TgCrypto = "^1.2.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
aiohttp = {extras=["cchardet", "aiodns"], version="^3.8.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
